solved contact list multi-select mobile display issue, and drag n drop alignement

--- a/app/styles/pages/common/common-component-mobile-mulitselect.scss
+++ b/app/styles/pages/common/common-component-mobile-mulitselect.scss
@@ -83,4 +83,5 @@ DYNAMIC MULTISELECT DISPLAY
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   background-color: #fff;
   width: 100%;
+  overflow: hidden;
 }
