--- a/app/styles/pages/common/component/component-ui-drag-and-drop.scss
+++ b/app/styles/pages/common/component/component-ui-drag-and-drop.scss
@@ -55,7 +55,6 @@
   user-select: none;
   pointer-events: none;
   .drag-and-drop-content {
-    padding-top: 50px;
     display: table-cell;
     vertical-align: middle;
   }
